# yachallenge_backend

./: .gitignore  .openapi.yaml.swp  CMakeLists.txt  Makefile  README.md  config.json  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
handler/v1/login/: login.cpp  login.hpp
handler/v1/register/: register.hpp
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/handlers/v1/: main.cpp
src/handlers/v1/admin/add-category/: .view.cpp.swp  view.cpp  view.hpp
src/handlers/v1/admin/add-challenge/: view.cpp  view.hpp
src/handlers/v1/complate-challange/: view.cpp  view.hpp
src/handlers/v1/complate-challenge/: view.cpp  view.hpp
src/handlers/v1/get-categories/: view.cpp  view.hpp
src/handlers/v1/get-challenges/: view.cpp  view.hpp
src/handlers/v1/get-completed/: view.cpp
src/handlers/v1/get-profile/: .view.cpp.swo  .view.cpp.swp  view.cpp  view.hpp
src/handlers/v1/login/: login.cpp  login.hpp
src/handlers/v1/register/: register.cpp  register.hpp
src/handlers/v1/users/: .view.cpp.swp  view.cpp
src/handlers/v1/users/categories/: .view.cpp.swp  view.cpp  view.hpp
src/handlers/v1/users/challenges/: view.cpp  view.hpp
src/handlers/v1/users/create/: view.cpp  view.hpp
src/handlers/v1/users/rank/: view.cpp  view.hpp
src/handlers/v1/users/rankings/: view.cpp  view.hpp
src/handlers/v1/users/update/: view.cpp  view.hpp
src/lib/: daily-action.cpp  send-notification-task.cpp  uuids.cpp  uuids.hpp
src/models/: \  category.cpp  category.hpp  challenge.cpp  challenge.hpp  completedChallenges.cpp  completedChallenges.hpp  user.cpp  user.hpp  userCategories.cpp  userCategories.hpp  userStats.cpp  userStats.hpp
tests/: conftest.py  test_basic.py
